istio_scenarios/istio_mtls_ocp4/amazin-prd-destrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-gateway
spec:
  host: api-gateway-prd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory
spec:
  host: inventory-prd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1
  # - name: v2
  #   labels:
  #     version: v2
  # - name: v3
  #   labels:
  #     version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: basket
spec:
  host: basket-prd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user
spec:
  host: user-prd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1
